--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -40,7 +40,7 @@
     <div data-input class="{{ type == 'checkbox' or type == 'radio' ? 'custom-control custom-' ~ type : 'form-group' }} {{ error }}">
         {# COMMON LABEL #}
         {% if label is not empty and type not in ['checkbox', 'radio'] %}
-            <label class="placeholder">
+            <label>
                 <b>{{ label|raw }}</b>
 
                 {% if args.required is not empty %}
