--- a/theme/default/user.register.twig
+++ b/theme/default/user.register.twig
@@ -113,7 +113,7 @@
                             </div>
 
                             <div class="form-label-group">
-                                {% include 'cup/form.twig' with {
+                                {% include 'mixin/form.twig' with {
                                     'label': 'Пароль',
                                     'type': 'password',
                                     'name': 'password',
@@ -121,7 +121,7 @@
                             </div>
 
                             <div class="form-label-group">
-                                {% include 'cup/form.twig' with {
+                                {% include 'mixin/form.twig' with {
                                     'label': 'Пароль',
                                     'type': 'password',
                                     'name': 'password_again',
