--- a/theme/default/user.profile.twig
+++ b/theme/default/user.profile.twig
@@ -91,7 +91,7 @@
                             <div class="col-12 col-md-6">
                                 {% include 'mixin/form.twig' with {
                                     'label': 'Новый пароль',
-                                    'type': 'tel',
+                                    'type': 'text',
                                     'name': 'password',
                                     'args': {
                                         'placeholder': 'Оставьте пустым, если не нужно менять'
