fix publications current category select

--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -78,7 +78,7 @@
                                             'args': {
                                                 'required': true,
                                                 'option': list.pluck('title', 'uuid').all(),
-                                                'selected': publication.category
+                                                'selected': publication.category_uuid
                                             }
                                         } %}
                                     </div>
