fix new form recaptcha default value

--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -153,7 +153,7 @@
                                             'name': 'recaptcha',
                                             'args': {
                                                 'option': _(['yes', 'no']),
-                                                'selected': item.recaptcha ? 'yes' : 'no'
+                                                'selected': item ? (item.recaptcha ? 'yes' : 'no') : 'yes'
                                             }
                                         } %}
                                     </div>
