--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -3,7 +3,7 @@
 {% block head %}
     <meta name="description" content="{{ parameter('common_description') }}">
     <meta name="keywords" content="{{ parameter('common_keywords') }}">
-    <meta name="canonical" content="{{ parameter('common_homepage') }}">
+    <link rel="canonical" href="{{ parameter('common_homepage') }}"/>
 
     <!-- Favicon -->
     <link href="/shopgrid/favicon.svg" rel="shortcut icon" />
