rename sha to SHA is const

--- a/src/Template/cup/editor.twig
+++ b/src/Template/cup/editor.twig
@@ -15,20 +15,20 @@
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', async () => {
             await window.loader([
-                '/assets/js/plugin/codemirror/lib/codemirror.css?v={{ sha }}',
-                '/assets/js/plugin/froala/froala_editor.pkgd.css?v={{ sha }}',
-                '/assets/js/plugin/froala/froala_style.css?v={{ sha }}',
-                '/assets/js/plugin/codemirror/lib/codemirror.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/addon/mode/overlay.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/addon/selection/selection-pointer.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/css/css.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/htmlmixed/htmlmixed.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/javascript/javascript.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/markdown/markdown.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/twig/twig.js?v={{ sha }}',
-                '/assets/js/plugin/codemirror/mode/xml/xml.js?v={{ sha }}',
-                '/assets/js/plugin/froala/froala_editor.pkgd.js?v={{ sha }}',
-                '/assets/js/plugin/froala/ru.js?v={{ sha }}',
+                '/assets/js/plugin/codemirror/lib/codemirror.css?v={{ SHA }}',
+                '/assets/js/plugin/froala/froala_editor.pkgd.css?v={{ SHA }}',
+                '/assets/js/plugin/froala/froala_style.css?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/lib/codemirror.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/mode/overlay.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/addon/selection/selection-pointer.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/css/css.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/htmlmixed/htmlmixed.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/javascript/javascript.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/markdown/markdown.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/twig/twig.js?v={{ SHA }}',
+                '/assets/js/plugin/codemirror/mode/xml/xml.js?v={{ SHA }}',
+                '/assets/js/plugin/froala/froala_editor.pkgd.js?v={{ SHA }}',
+                '/assets/js/plugin/froala/ru.js?v={{ SHA }}',
             ]);
 
             (function init() {
