--- a/src/Template/cup/system/index.twig
+++ b/src/Template/cup/system/index.twig
@@ -15,7 +15,7 @@
             <div class="card-footer">
                 <div>
                     Copyright &copy; 2011-{{ 'now'|df('Y') }} <a href="https://getwebspace.org" target="_blank">WebSpace Engine</a> &mdash; {{ 'платформа для управления контентом на сайте'|locale }}.<br>
-                    {{ 'Сборка'|locale }}: <span class="text-muted">{{ sha }}</span>
+                    {{ 'Сборка'|locale }}: <span class="text-muted">{{ SHA }}</span>
                 </div>
             </div>
         </div>
