--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -12,7 +12,7 @@
         {% block style '' %}
 
         <title>{% block title deferred %}{{ title ? title ~ ' | ' : '' }}{{ parameter('common_title') }}{% endblock %}</title>
-        <script defer type="text/javascript" src="/assets/js/wse.js?v={{ sha }}"></script>
+        <script defer type="text/javascript" src="/assets/js/wse.js?v={{ SHA }}"></script>
     </head>
 
     {% block body %}
