fix operator in check

--- a/src/Template/mixin/img.twig
+++ b/src/Template/mixin/img.twig
@@ -12,7 +12,7 @@
     <img
         data-lazyload-image
         data-src="{{ src }}"
-        {{ placeholder ? ('src="' ~ placeholder ~ '"')|raw ? '' }}
+        {{ placeholder ? ('src="' ~ placeholder ~ '"')|raw : '' }}
         {{ id ? ('id="'~ id|trim ~ '"')|raw : '' }}
         {{ class ? ('class="'~ class|trim ~'"')|raw : '' }}
         {{ alt ? ('alt="'~ alt|trim ~'"')|raw : '' }}
