--- a/src/Template/mixin/adbd.twig
+++ b/src/Template/mixin/adbd.twig
@@ -1,9 +1,9 @@
 {% htmlcompress %}
     <div id="adbd">
-        <p><b>Пожалуйста, отключите AdBlock</b></p>
+        <p><b>Please disable AdBlock</b></p>
         <p>
-            AdBlock мешает корректной работе нашего сайта<br>
-            Внесите наш сайт в список исключений
+            AdBlock interferes with the correct operation of our site<br>
+            Add our site to the list of exceptions
         </p>
     </div>
     <div id="wrapfabtest">
