--- a/src/Template/mixin/cookies.twig
+++ b/src/Template/mixin/cookies.twig
@@ -1,13 +1,13 @@
 {% htmlcompress %}
     <div id="cookie" class="hidden">
-        <h3>Про использование cookies</h3>
+        <h3>About the use of cookies</h3>
         <p>
-            Продолжая просматривать этот сайт выподтверждаете, что соглашаетесь на использование файлов cookie.
+            By continuing to browse this site, you confirm that you agree to the use of cookies.
         </p>
 
         <div class="row">
             <div class="offset-6 col-6">
-                <button class="btn btn-primary">Соглашаюсь</button>
+                <button class="btn btn-primary">I agree</button>
             </div>
         </div>
     </div>
