--- a/src/Template/mixin/form.twig
+++ b/src/Template/mixin/form.twig
@@ -1,11 +1,11 @@
 {#
-    label - ярлык поля
-    name - имя поля
-    type - тип поля
-    args - аргументы поля
-    message - сообщение
-    prefix - префикс перед полем
-    postfix - постфикс после поля
+    label - field label
+    name - field name
+    type - field type
+    args - field other args
+    message - comment
+    prefix - prefix input
+    postfix - postfix input
 #}
 {% htmlcompress %}
     {% if name is empty %}
