--- a/src/Template/mixin/img.twig
+++ b/src/Template/mixin/img.twig
@@ -1,12 +1,12 @@
 {#
-    placeholder - ссылка на картинку-заглушку
-    src - ссылка на картинку
+    placeholder - image link for placeholder
+    src - image link
     id - attr id
     class - attr class
     alt - attr alt
     title - attr title
     style - attr style
-    args - другие аргументы
+    args - other args
 #}
 {% htmlcompress %}
     <img
